--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
-streamlit==1.52.2
-pandas==2.3.3
-numpy==2.2.6
-plotly==6.5.1
-scikit-learn==1.7.2
-joblib==1.5.3
-pyarrow==22.0.0
-lightgbm==4.6.0
-huggingface-hub==1.3.2
-fsspec==2026.1.0
+streamlit
+pandas 
+numpy 
+plotly 
+scikit-learn 
+joblib 
+pyarrow 
+lightgbm 
+huggingface_hub 
+fsspec 
+pyarrow 
+lightgbm 
+joblib
